# CMake

./: CMakeLists.txt  README.md  main.cpp
include/: led.h
lib/: CMakeLists.txt  mymath.cpp  mymath.h
src/: defaultconfig.h.in  led.cpp
