set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)
cmake_minimum_required(VERSION 3.22)
project(APP VERSION 7.6)
set(SRC_FILES main.cpp src/led.cpp)
message("Src files: ${SRC_FILES}")
if(EXISTS ${CMAKE_SOURCE_DIR}/main.c)
    message("File is here!!")
else()
    message("File is not here!!")
endif()
add_subdirectory(${CMAKE_SOURCE_DIR}/lib)
add_executable(app ${SRC_FILES})
target_include_directories(app PUBLIC include/ lib/ ${PROJECT_BINARY_DIR})
target_link_libraries(app PUBLIC math_lib)
# message("This is external variable ${ext}")
set(PRODUCT_YEAR 2019)
configure_file(src/defaultconfig.h.in defaultconfig.h)

